--- a/recipes/friedchicken.html
+++ b/recipes/friedchicken.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Homepage</title>
+        <title>Fried Chicken</title>
     </head>
     <body>
-        <h1>The Odin Recipes</h1>
-        <a href="./recipes/friedchicken.html">Fried Chicken</a>
+        <h1>Fried Chicken</h1>
+        <a href="../index.html">Home</a>
     </body>
 </html>
