Add img, description, ingredients, steps
Add an img of the finished dish under the main heading.
Add a "Description" under the img explainning the recipe.
Add an "Ingredients" with unordered list of ingredients.
Add a "Steps" with ordered list of recipe steps.

--- a/recipes/friedchicken.html
+++ b/recipes/friedchicken.html
@@ -7,6 +7,35 @@
     </head>
     <body>
         <h1>Fried Chicken</h1>
+        <img src="../img/friedchicken.jpeg" alt="Fried Chicken Decilious">
+        <h3>Description</h3>
+        <p>
+            This fried chicken recipe delivers perfectly crispy skin and juicy meat 
+            with every bite. Seasoned with a blend of spices and deep-fried to 
+            golden perfection, it's a timeless favorite for any meal.
+        </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 whole chicken (cut into pieces)</li>
+            <li>2 cups all-purpose flour</li>
+            <li>2 teaspoons salt</li>
+            <li>1 teaspoon black pepper</li>
+            <li>1 teaspoon paprika (optional)</li>
+            <li>1 teaspoon garlic powder</li>
+            <li>2 eggs</li>
+            <li>1 cup buttermilk or milk</li>
+            <li>Cooking oil for frying</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>In a bowl, mix flour with salt, pepper, and spices.</li>
+            <li>In another bowl, whisk eggs with buttermilk.</li>
+            <li>Dip chicken pieces into the egg mixture, then coat with the flour mixture.</li>
+            <li>Heat oil in a deep pan over medium heat.</li>
+            <li>Fry chicken until golden brown and fully cooked (about 10–15 minutes).</li>
+            <li>Place on paper towels to remove excess oil.</li>
+            <li>Serve hot with your favorite sides.</li>
+        </ol>
         <a href="../index.html">Home</a>
     </body>
 </html>
