--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     </head>
     <body>
         <h1>The Odin Recipes</h1>
-        <a href="./recipes/friedchicken.html">Fried Chicken</a>
+        <h3>List of recipes</h3>
+        <ul>
+            <li><a href="./recipes/friedchicken.html">Fried Chicken</a></li>
+            <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
+        </ul>
+        
     </body>
 </html>
