--- a/recipes/friedchicken.html
+++ b/recipes/friedchicken.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Fried Chicken</h1>
-        <img src="../img/friedchicken.jpeg" alt="Fried Chicken Decilious">
+        <img src="../img/friedchicken.jpeg" alt="Fried Chicken Decilious" width="75%">
         <h3>Description</h3>
         <p>
             This fried chicken recipe delivers perfectly crispy skin and juicy meat 
